--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,149 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Welcome (user)
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <!--Gamification-->
+  <div id="gamificationBox"> 
+    <ion-card>
+      <ion-card-content>
+        
+        <!--top-->
+        <div>
+          <!--streak & task done-->
+          <div></div>      
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+          <!--circle-->
+          <div></div>
+        </div>
+
+        <!--bottom-->
+        <div>
+          <!--day-->
+          <div></div>
+          <!--week-->
+          <div></div>
+          <!--month-->
+          <div></div>
+        </div>
+      </ion-card-content>
+    </ion-card>
+
+    <div id=""></div>
+  </div>
+
+  <!--categories-->
+<div id="categories">
+  <ion-card>
+    <ion-card-content>
+      <ion-slides pager="true" [options]="slideOpts">
+      <!--home-->
+      <ion-slide>
+          <!--home-->
+          <ion-button color="translucent">
+            <ion-card>
+              <ion-card-header>
+                <ion-icon name="home"></ion-icon>
+              </ion-card-header>
+
+              <ion-card-content>
+                <ion-card-title>Home</ion-card-title>
+                <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+              </ion-card-content>
+            </ion-card>    
+            
+          </ion-button>
+      </ion-slide>
+      
+      <!--home-->
+      <ion-slide>
+          <!--home-->
+          <ion-button color="translucent">
+            <ion-card>
+              <ion-card-header>
+                <ion-icon name="home"></ion-icon>
+              </ion-card-header>
+
+              <ion-card-content>
+                <ion-card-title>Home</ion-card-title>
+                <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+              </ion-card-content>
+            </ion-card>    
+            
+          </ion-button>
+      </ion-slide>
+
+      <!--home-->
+      <ion-slide>
+          <!--home-->
+          <ion-button color="translucent">
+            <ion-card>
+              <ion-card-header>
+                <ion-icon name="home"></ion-icon>
+              </ion-card-header>
+
+              <ion-card-content>
+                <ion-card-title>Home</ion-card-title>
+                <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+              </ion-card-content>
+            </ion-card>    
+            
+          </ion-button>
+      </ion-slide>
+
+      <!--home-->
+      <ion-slide>
+      <!--home-->
+      <ion-button color="translucent">
+        <ion-card>
+          <ion-card-header>
+            <ion-icon name="home"></ion-icon>
+          </ion-card-header>
+
+          <ion-card-content>
+            <ion-card-title>Home</ion-card-title>
+            <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+          </ion-card-content>
+        </ion-card>    
+        
+      </ion-button>
+      </ion-slide>
+
+    </ion-slides>
+
+    </ion-card-content>
+  </ion-card>
+</div>
+
+  <!--Task List-->
+  <div id="taskList">
+    <ion-card>
+      <ion-card-header>Tasks</ion-card-header>
+
+      <ion-card-content>
+        <ion-list>
+          <ion-item-sliding>        
+            <ion-item>
+              <ion-checkbox></ion-checkbox>
+              <ion-label>TASK name</ion-label>
+            </ion-item>
+        
+            <ion-item-options side="end">
+              <ion-item-option (click)="unread(item)">Delete</ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
+
+          
+
+        </ion-list>
+
+      </ion-card-content>
+    </ion-card>
+
+  </div>
+
 </ion-content>
