--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -41,65 +41,10 @@
   <ion-card>
     <ion-card-content>
       <ion-slides pager="true" [options]="slideOpts">
-      <!--home-->
-      <ion-slide>
-          <!--home-->
-          <ion-button color="translucent">
-            <ion-card>
-              <ion-card-header>
-                <ion-icon name="home"></ion-icon>
-              </ion-card-header>
 
-              <ion-card-content>
-                <ion-card-title>Home</ion-card-title>
-                <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-              </ion-card-content>
-            </ion-card>    
-            
-          </ion-button>
-      </ion-slide>
-      
-      <!--home-->
-      <ion-slide>
-          <!--home-->
-          <ion-button color="translucent">
-            <ion-card>
-              <ion-card-header>
-                <ion-icon name="home"></ion-icon>
-              </ion-card-header>
-
-              <ion-card-content>
-                <ion-card-title>Home</ion-card-title>
-                <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-              </ion-card-content>
-            </ion-card>    
-            
-          </ion-button>
-      </ion-slide>
-
-      <!--home-->
-      <ion-slide>
-          <!--home-->
-          <ion-button color="translucent">
-            <ion-card>
-              <ion-card-header>
-                <ion-icon name="home"></ion-icon>
-              </ion-card-header>
-
-              <ion-card-content>
-                <ion-card-title>Home</ion-card-title>
-                <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-              </ion-card-content>
-            </ion-card>    
-            
-          </ion-button>
-      </ion-slide>
-
-      <!--home-->
       <ion-slide>
       <!--home-->
-      <ion-button color="translucent">
-        <ion-card>
+        <ion-card id="home">
           <ion-card-header>
             <ion-icon name="home"></ion-icon>
           </ion-card-header>
@@ -108,12 +53,71 @@
             <ion-card-title>Home</ion-card-title>
             <ion-card-subtitle>5/10 completed</ion-card-subtitle>
           </ion-card-content>
-        </ion-card>    
-        
-      </ion-button>
+        </ion-card>            
+
       </ion-slide>
 
-    </ion-slides>
+      <ion-slide>
+        <!--home-->
+          <ion-card id="home">
+            <ion-card-header>
+              <ion-icon name="home"></ion-icon>
+            </ion-card-header>
+  
+            <ion-card-content>
+              <ion-card-title>Home</ion-card-title>
+              <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+            </ion-card-content>
+          </ion-card>            
+  
+        </ion-slide>
+
+        <ion-slide>
+          <!--home-->
+            <ion-card id="home">
+              <ion-card-header>
+                <ion-icon name="home"></ion-icon>
+              </ion-card-header>
+    
+              <ion-card-content>
+                <ion-card-title>Home</ion-card-title>
+                <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+              </ion-card-content>
+            </ion-card>            
+    
+          </ion-slide>
+
+          <ion-slide>
+            <!--home-->
+              <ion-card id="home">
+                <ion-card-header>
+                  <ion-icon name="home"></ion-icon>
+                </ion-card-header>
+      
+                <ion-card-content>
+                  <ion-card-title>Home</ion-card-title>
+                  <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                </ion-card-content>
+              </ion-card>            
+      
+            </ion-slide>
+
+            <ion-slide>
+              <!--home-->
+                <ion-card id="home">
+                  <ion-card-header>
+                    <ion-icon name="home"></ion-icon>
+                  </ion-card-header>
+        
+                  <ion-card-content>
+                    <ion-card-title>Home</ion-card-title>
+                    <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                  </ion-card-content>
+                </ion-card>            
+        
+              </ion-slide>
+
+      </ion-slides>
 
     </ion-card-content>
   </ion-card>
