--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,468 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Calendar
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <!--Segment-->
+  <ion-segment [(ngModel)]="selectTabs">
+    <ion-segment-button value="Daily">
+      <ion-label>Daily</ion-label>
+    </ion-segment-button>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+    <ion-segment-button value="Monthly">
+      <ion-label>Monthly</ion-label>
+    </ion-segment-button>
+  </ion-segment>
+
+  <h3 class="ion-text-center">Month</h3>
+
+  <div class="Daily" *ngIf="selectTabs =='Daily'">
+  <!--Week buttons-->
+  <div id="weekButtons">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="1.7">
+        <!--Sunday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+            <ion-card-subtitle>(3)</ion-card-subtitle>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+
+      <ion-col size="1.7">
+        <!--monday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+            <ion-card-subtitle>(3)</ion-card-subtitle>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+
+      <ion-col size="1.7">
+        <!--tuesday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+            <ion-card-subtitle>(3)</ion-card-subtitle>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+
+      <ion-col size="1.7">
+        <!--wednesday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+            <ion-card-subtitle>(3)</ion-card-subtitle>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+
+      <ion-col size="1.7">
+        <!--thursday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+            <ion-card-subtitle>(3)</ion-card-subtitle>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+
+      <ion-col size="1.7">
+        <!--friday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+            <ion-card-subtitle>(3)</ion-card-subtitle>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+
+      <ion-col size="1.7">
+        <!--Saturday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+            <ion-card-subtitle>(3)</ion-card-subtitle>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+      
+    </ion-row>
+
+    </ion-grid>
+  </div>
+
+  <!--categories-->
+  <div id="categories">
+    <ion-card>
+      <ion-card-content>
+        <ion-slides pager="true" [options]="slideOpts">
+  
+        <ion-slide>
+        <!--home-->
+          <ion-card id="home">
+            <ion-card-header>
+              <ion-icon name="home"></ion-icon>
+            </ion-card-header>
+  
+            <ion-card-content>
+              <ion-card-title>Home</ion-card-title>
+              <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+            </ion-card-content>
+          </ion-card>            
+  
+        </ion-slide>
+  
+        <ion-slide>
+          <!--home-->
+            <ion-card id="home">
+              <ion-card-header>
+                <ion-icon name="home"></ion-icon>
+              </ion-card-header>
+    
+              <ion-card-content>
+                <ion-card-title>Home</ion-card-title>
+                <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+              </ion-card-content>
+            </ion-card>            
+    
+          </ion-slide>
+  
+          <ion-slide>
+            <!--home-->
+              <ion-card id="home">
+                <ion-card-header>
+                  <ion-icon name="home"></ion-icon>
+                </ion-card-header>
+      
+                <ion-card-content>
+                  <ion-card-title>Home</ion-card-title>
+                  <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                </ion-card-content>
+              </ion-card>            
+      
+            </ion-slide>
+  
+            <ion-slide>
+              <!--home-->
+                <ion-card id="home">
+                  <ion-card-header>
+                    <ion-icon name="home"></ion-icon>
+                  </ion-card-header>
+        
+                  <ion-card-content>
+                    <ion-card-title>Home</ion-card-title>
+                    <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                  </ion-card-content>
+                </ion-card>            
+        
+              </ion-slide>
+  
+              <ion-slide>
+                <!--home-->
+                  <ion-card id="home">
+                    <ion-card-header>
+                      <ion-icon name="home"></ion-icon>
+                    </ion-card-header>
+          
+                    <ion-card-content>
+                      <ion-card-title>Home</ion-card-title>
+                      <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                    </ion-card-content>
+                  </ion-card>            
+          
+                </ion-slide>
+  
+        </ion-slides>
+  
+      </ion-card-content>
+    </ion-card>
+  </div>
+
+  <!--Task List-->
+  <div id="taskList">
+    <ion-card>
+      <ion-card-header>Tasks</ion-card-header>
+
+      <ion-card-content>
+        <ion-list>
+          <ion-item-sliding>        
+            <ion-item>
+              <ion-checkbox></ion-checkbox>
+              <ion-label>TASK name</ion-label>
+            </ion-item>
+        
+            <ion-item-options side="end">
+              <ion-item-option (click)="unread(item)">Delete</ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
+
+          
+
+        </ion-list>
+
+      </ion-card-content>
+    </ion-card>
+
+  </div>
+
+  <!--Gamification-->
+  <div id="gamificationBox"> 
+    <ion-card>
+      <ion-card-content>
+        
+        <!--top-->
+        <div>
+          <!--streak & task done-->
+          <div></div>      
+
+          <!--circle-->
+          <div></div>
+        </div>
+
+        <!--bottom-->
+        <div>
+          <!--day-->
+          <div></div>
+          <!--week-->
+          <div></div>
+          <!--month-->
+          <div></div>
+        </div>
+      </ion-card-content>
+    </ion-card>
+
+    <div id=""></div>
+  </div>
+
+</div>
+
+<div  class="monthly" *ngIf="selectTabs =='Monthly'">
+  <!--month buttons-->
+  <div id="monthButtons">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="1.7">
+        <!--Sunday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+
+      <ion-col size="1.7">
+        <!--monday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+
+      <ion-col size="1.7">
+        <!--tuesday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+
+      <ion-col size="1.7">
+        <!--wednesday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+
+      <ion-col size="1.7">
+        <!--thursday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+
+      <ion-col size="1.7">
+        <!--friday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+
+      <ion-col size="1.7">
+        <!--Saturday-->
+        <ion-card>
+          <ion-card-content>
+            <ion-card-title>S</ion-card-title>
+          </ion-card-content>
+        </ion-card> 
+      </ion-col>
+      
+    </ion-row>
+
+    </ion-grid>
+  </div>
+
+  <!--caldenar API-->
+  <div class="calendar">
+  </div>
+
+  <!--categories-->
+  <div id="categories">
+    <ion-card>
+      <ion-card-content>
+        <ion-slides pager="true" [options]="slideOpts">
+  
+        <ion-slide>
+        <!--home-->
+          <ion-card id="home">
+            <ion-card-header>
+              <ion-icon name="home"></ion-icon>
+            </ion-card-header>
+  
+            <ion-card-content>
+              <ion-card-title>Home</ion-card-title>
+              <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+            </ion-card-content>
+          </ion-card>            
+  
+        </ion-slide>
+  
+        <ion-slide>
+          <!--home-->
+            <ion-card id="home">
+              <ion-card-header>
+                <ion-icon name="home"></ion-icon>
+              </ion-card-header>
+    
+              <ion-card-content>
+                <ion-card-title>Home</ion-card-title>
+                <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+              </ion-card-content>
+            </ion-card>            
+    
+          </ion-slide>
+  
+          <ion-slide>
+            <!--home-->
+              <ion-card id="home">
+                <ion-card-header>
+                  <ion-icon name="home"></ion-icon>
+                </ion-card-header>
+      
+                <ion-card-content>
+                  <ion-card-title>Home</ion-card-title>
+                  <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                </ion-card-content>
+              </ion-card>            
+      
+            </ion-slide>
+  
+            <ion-slide>
+              <!--home-->
+                <ion-card id="home">
+                  <ion-card-header>
+                    <ion-icon name="home"></ion-icon>
+                  </ion-card-header>
+        
+                  <ion-card-content>
+                    <ion-card-title>Home</ion-card-title>
+                    <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                  </ion-card-content>
+                </ion-card>            
+        
+              </ion-slide>
+  
+              <ion-slide>
+                <!--home-->
+                  <ion-card id="home">
+                    <ion-card-header>
+                      <ion-icon name="home"></ion-icon>
+                    </ion-card-header>
+          
+                    <ion-card-content>
+                      <ion-card-title>Home</ion-card-title>
+                      <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                    </ion-card-content>
+                  </ion-card>            
+          
+                </ion-slide>
+  
+        </ion-slides>
+  
+      </ion-card-content>
+    </ion-card>
+  </div>
+
+  <!--Task List-->
+  <div id="taskList">
+    <ion-card>
+      <ion-card-header>Tasks</ion-card-header>
+
+      <ion-card-content>
+        <ion-list>
+          <ion-item-sliding>        
+            <ion-item>
+              <ion-checkbox></ion-checkbox>
+              <ion-label>TASK name</ion-label>
+            </ion-item>
+        
+            <ion-item-options side="end">
+              <ion-item-option (click)="unread(item)">Delete</ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
+
+          
+
+        </ion-list>
+
+      </ion-card-content>
+    </ion-card>
+
+  </div>
+
+  <!--Gamification-->
+  <div id="gamificationBox"> 
+    <ion-card>
+      <ion-card-content>
+        
+        <!--top-->
+        <div>
+          <!--streak & task done-->
+          <div></div>      
+
+          <!--circle-->
+          <div></div>
+        </div>
+
+        <!--bottom-->
+        <div>
+          <!--day-->
+          <div></div>
+          <!--week-->
+          <div></div>
+          <!--month-->
+          <div></div>
+        </div>
+      </ion-card-content>
+    </ion-card>
+
+    <div id=""></div>
+  </div>
+</div>
 </ion-content>
