--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -14,7 +14,7 @@
 
     <ion-item>
       <ion-avatar slot="start">
-        <img src="./avatar-finn.png">
+        <img src="/assets/images/profile.jpg">
       </ion-avatar>
       <ion-label>
         <h2>Finn</h2>
@@ -25,7 +25,7 @@
 
     <ion-item>
       <ion-avatar slot="start">
-        <img src="./avatar-han.png">
+        <img src="/assets/images/profile.jpg">
       </ion-avatar>
       <ion-label>
         <h2>Han</h2>
@@ -36,7 +36,7 @@
 
     <ion-item>
       <ion-avatar slot="start">
-        <img src="./avatar-rey.png">
+        <img src="/assets/images/profile.jpg">
       </ion-avatar>
       <ion-label>
         <h2>Rey</h2>
@@ -47,7 +47,7 @@
 
     <ion-item>
       <ion-avatar slot="start">
-        <img src="./avatar-luke.png">
+        <img src="/assets/images/profile.jpg">
       </ion-avatar>
       <ion-label>
         <h2>Luke</h2>
@@ -64,7 +64,7 @@
 
     <ion-item>
       <ion-avatar slot="start">
-        <img src="./avatar-poe.png">
+        <img src="/assets/images/profile.jpg">
       </ion-avatar>
       <ion-label>
         <h2>Poe</h2>
@@ -75,7 +75,7 @@
 
     <ion-item>
       <ion-avatar slot="start">
-        <img src="./avatar-ben.png">
+        <img src="/assets/images/profile.jpg">
       </ion-avatar>
       <ion-label>
         <h2>Ben</h2>
@@ -86,7 +86,7 @@
 
     <ion-item>
       <ion-avatar slot="start">
-        <img src="./avatar-leia.png">
+        <img src="/assets/images/profile.jpg">
       </ion-avatar>
       <ion-label>
         <h2>Leia</h2>
@@ -97,7 +97,7 @@
 
     <ion-item>
       <ion-avatar slot="start">
-        <img src="./avatar-yoda.png">
+        <img src="/assets/images/profile.jpg">
       </ion-avatar>
       <ion-label>
         <h2>Yoda</h2>
