--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,30 +1,33 @@
 
-#categories{
-
-    #home{
-        height: 10rem;
-    }
-
-    ion-card-content{
-        padding:.1rem 0 .1rem 0;
-    }
-
+#categories{    
+    
     ion-card{
+        background-color: red;
         margin:1rem 0 1rem 0;
-        height: 12rem;
+        height: 12.3rem;
     }
-
-    
-    ion-card-title{
-        font-size: 1.2rem;
-    }  
-    
     ion-icon{
         padding: 1rem;
         font-size: 2rem;
-        background-color: red;
         border-radius: 1.5rem;
-    }    
+    }   
+    
+    ion-card-content{        
+        padding:.1rem 0 .1rem 0;
+
+        ion-card-title{
+            font-size: 1.2rem;
+        }  
+    }
+
+    #today{      
+        height:10rem; 
+        background-color: #eb9a3a;
+        ion-icon{
+            color: #eb9a3a;
+            background-color: #F6C731;
+        }
+    }
 
 }
 
