--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -17,7 +17,7 @@
               <ion-row>
                 <ion-col>
                   <h5>Streak</h5>
-                  <h2>10 Days test</h2>
+                  <h2>10 Days</h2>
                 </ion-col>
               </ion-row>
     
