initial data structure

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -20,7 +20,7 @@
   </ion-item>
   <ion-button id="forgotPass" fill="clear">forgot password</ion-button>
 
-  <ion-button id="logInButton" expand="block">Log In</ion-button>
+  <ion-button  routerLink="/tabs/tab1" id="logInButton" expand="block">Log In</ion-button>
 
   <h6 class="ion-text-center">or</h6>
 
