--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -23,7 +23,8 @@
     
               <ion-row>
                 <ion-col>
-                  task done
+                  <h5>Tasks Done</h5>
+                  <h2>2 Tasks</h2>
                 </ion-col>
               </ion-row>
             </ion-col>
@@ -31,6 +32,27 @@
             <ion-col>
               circle
             </ion-col>
+          </ion-row>
+
+          <ion-row>
+            <ion-col>
+              <h5>Day</h5>
+              <ion-progress-bar value="0.5"></ion-progress-bar>
+              <h5>Day</h5>
+            </ion-col>
+
+            <ion-col>
+              <h5>Day</h5>
+              <ion-progress-bar value="0.5"></ion-progress-bar>
+              <h5>Day</h5>
+            </ion-col>
+
+            <ion-col>
+              <h5>Day</h5>
+              <ion-progress-bar value="0.5"></ion-progress-bar>
+              <h5>Day</h5>
+            </ion-col>
+
           </ion-row>
           
         </ion-grid>  
