--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -154,9 +154,9 @@
       <ion-card-content>
         <ion-list>
           <ion-item-sliding>        
-            <ion-item>
+            <ion-item> <!-- loop here -->
               <ion-checkbox></ion-checkbox>
-              <ion-label>TASK name</ion-label>
+              <ion-label></ion-label>
             </ion-item>
         
             <ion-item-options side="end">
