--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -35,21 +35,17 @@
       <div class="inputArea">
         <ion-item id="listName">
           <ion-label position="floating">Enter List Name</ion-label>
-          <ion-input clearInput [(ngModel)]="listName"></ion-input>
+          <ion-input clearInput [(ngModel)]="item.name"></ion-input>
         </ion-item>
 
-        <ion-item>
+        <ion-item *ngFor="let task of item.tasks">
           <ion-label position="floating">Enter Task Name</ion-label>
-          <ion-input clearInput></ion-input>
+          <ion-input clearInput [(ngModel)]="task.name"></ion-input>
         </ion-item>
 
-        <ion-item>
-          
-          <ion-label position="floating">
-            <ion-icon name="add-outline"></ion-icon>
-            Add Task
-          </ion-label>      
-          <ion-input clearInput></ion-input>
+        <ion-item (click)="addTask()">
+            <ion-icon name="add-outline" slot="start"></ion-icon>
+            Enter Task Name
         </ion-item>
 
       </div>
@@ -74,11 +70,11 @@
           <!--reminder-->
           <ion-item>
             <ion-label>Reminder</ion-label>
-            <ion-select value="notifications" interface="action-sheet">
+            <ion-select [(ngModel)]="item.reminder" value="notifications" interface="action-sheet">
               <ion-select-option value="enable">30 minutes</ion-select-option>
-              <ion-select-option value="#">1 hour</ion-select-option>
-              <ion-select-option value="#">2 Hours</ion-select-option>
-              <ion-select-option value="#">5 Hours</ion-select-option>
+              <ion-select-option value="1">1 hour</ion-select-option>
+              <ion-select-option value="2">2 Hours</ion-select-option>
+              <ion-select-option value="5">5 Hours</ion-select-option>
             </ion-select>
           </ion-item>
         </div>
@@ -88,88 +84,90 @@
     <!--Category-->
     <ion-slide>    
       <div class="inputArea">
-        <ion-grid>
-          <ion-row>
-            <ion-col>
-              <ion-card id="home">
-                <ion-card-header>
-                  <ion-icon name="home"></ion-icon>
-                </ion-card-header>      
-                <ion-card-content>
-                  <ion-card-title>Home</ion-card-title>
-                  <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
+        <ion-radio-group value="#">
+          <ion-grid>
+            <ion-row>
+              <ion-col>
+                <ion-card value="home" id="home">
+                  <ion-card-header>
+                    <ion-icon name="home"></ion-icon>
+                  </ion-card-header>      
+                  <ion-card-content>
+                    <ion-card-title>Home</ion-card-title>
+                    <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                  </ion-card-content>
+                </ion-card>
+              </ion-col>
 
-            <ion-col>
-              <ion-card id="home">
-                <ion-card-header>
-                  <ion-icon name="home"></ion-icon>
-                </ion-card-header>      
-                <ion-card-content>
-                  <ion-card-title>Home</ion-card-title>
-                  <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
+              <ion-col>
+                <ion-card value="school" id="home">
+                  <ion-card-header>
+                    <ion-icon name="home"></ion-icon>
+                  </ion-card-header>      
+                  <ion-card-content>
+                    <ion-card-title>Home</ion-card-title>
+                    <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                  </ion-card-content>
+                </ion-card>
+              </ion-col>
 
-          </ion-row>
+            </ion-row>
 
-          <ion-row>
-            <ion-col>
-              <ion-card id="home">
-                <ion-card-header>
-                  <ion-icon name="home"></ion-icon>
-                </ion-card-header>      
-                <ion-card-content>
-                  <ion-card-title>Home</ion-card-title>
-                  <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
+            <ion-row>
+              <ion-col>
+                <ion-card id="home">
+                  <ion-card-header>
+                    <ion-icon name="home"></ion-icon>
+                  </ion-card-header>      
+                  <ion-card-content>
+                    <ion-card-title>Home</ion-card-title>
+                    <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                  </ion-card-content>
+                </ion-card>
+              </ion-col>
 
-            <ion-col>
-              <ion-card id="home">
-                <ion-card-header>
-                  <ion-icon name="home"></ion-icon>
-                </ion-card-header>      
-                <ion-card-content>
-                  <ion-card-title>Home</ion-card-title>
-                  <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
+              <ion-col>
+                <ion-card id="home">
+                  <ion-card-header>
+                    <ion-icon name="home"></ion-icon>
+                  </ion-card-header>      
+                  <ion-card-content>
+                    <ion-card-title>Home</ion-card-title>
+                    <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                  </ion-card-content>
+                </ion-card>
+              </ion-col>
 
-          </ion-row>
+            </ion-row>
 
-          <ion-row>
-            <ion-col>
-              <ion-card id="home">
-                <ion-card-header>
-                  <ion-icon name="home"></ion-icon>
-                </ion-card-header>      
-                <ion-card-content>
-                  <ion-card-title>Home</ion-card-title>
-                  <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
+            <ion-row>
+              <ion-col>
+                <ion-card id="home">
+                  <ion-card-header>
+                    <ion-icon name="home"></ion-icon>
+                  </ion-card-header>      
+                  <ion-card-content>
+                    <ion-card-title>Home</ion-card-title>
+                    <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                  </ion-card-content>
+                </ion-card>
+              </ion-col>
 
-            <ion-col>
-              <ion-card id="home">
-                <ion-card-header>
-                  <ion-icon name="home"></ion-icon>
-                </ion-card-header>      
-                <ion-card-content>
-                  <ion-card-title>Home</ion-card-title>
-                  <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
+              <ion-col>
+                <ion-card id="home">
+                  <ion-card-header>
+                    <ion-icon name="home"></ion-icon>
+                  </ion-card-header>      
+                  <ion-card-content>
+                    <ion-card-title>Home</ion-card-title>
+                    <ion-card-subtitle>5/10 completed</ion-card-subtitle>
+                  </ion-card-content>
+                </ion-card>
+              </ion-col>
 
-          </ion-row>
-        </ion-grid>
+            </ion-row>
+          </ion-grid>
+        </ion-radio-group>
       </div>
     </ion-slide>
   </ion-slides>  
@@ -177,6 +175,6 @@
 
 <ion-footer>  
   <section class="full-width">
-    <ion-button expand="full" color="secondary">Next</ion-button>
+    <ion-button expand="full" color="secondary" (click)="save()">Next</ion-button>
   </section>
 </ion-footer>
