Showing tasks on the home page

--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -20,7 +20,7 @@
         }  
     }
 
-    #today{      
+    #today,#home{      
         height:10rem; 
         background-color: #eb9a3a;
         ion-icon{
