--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -68,8 +68,8 @@
   <ion-card>
     <ion-card-content>
       <ion-slides pager="true" [options]="slideOpts">
+        <!--Today-->
         <ion-slide>
-          <!--Today-->
             <ion-card id="today">
               <ion-card-header>
                 <ion-icon name="Today"></ion-icon>
@@ -82,63 +82,25 @@
             </ion-card>               
           </ion-slide>
 
-      <!--home-->
-      <ion-slide>      
-        <ion-card id="home">
-          <ion-card-header>
-            <ion-icon name="home"></ion-icon>
-          </ion-card-header>
+          <!--home-->
+        <ion-slide *ngFor="let category of categories; let i = index">      
 
-          <ion-card-content>
-            <ion-card-title>Home</ion-card-title>
-            <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-          </ion-card-content>
-        </ion-card>            
-      </ion-slide>      
-
-      <!--Workout-->
-        <ion-slide>
-            <ion-card id="workout">
-              <ion-card-header>
-                <ion-icon name="fitness"></ion-icon>
-              </ion-card-header>
-    
-              <ion-card-content>
-                <ion-card-title>Workout</ion-card-title>
-                <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-              </ion-card-content>
-            </ion-card>          
-          </ion-slide>
-
-          <!--work-->
-          <ion-slide>
-              <ion-card id="work">
+          <ion-segment [(ngModel)]="selectTabs">
+            <ion-segment-button (click)="chooseCategory(i); getTasks(i)">
+              <ion-card id="home">
                 <ion-card-header>
-                  <ion-icon name="briefcase"></ion-icon>
+                  <ion-icon name="{{category.icon}}"></ion-icon>
                 </ion-card-header>
-      
+
                 <ion-card-content>
-                  <ion-card-title>Work</ion-card-title>
+                  <ion-card-title>{{category.name}}</ion-card-title>
                   <ion-card-subtitle>5/10 completed</ion-card-subtitle>
                 </ion-card-content>
               </ion-card>            
-      
-            </ion-slide>
+          </ion-segment-button>
+        </ion-segment>
 
-            <!--School-->
-            <ion-slide>
-                <ion-card id="school">
-                  <ion-card-header>
-                    <ion-icon name="School"></ion-icon>
-                  </ion-card-header>
-        
-                  <ion-card-content>
-                    <ion-card-title>School</ion-card-title>
-                    <ion-card-subtitle>5/10 completed</ion-card-subtitle>
-                  </ion-card-content>
-                </ion-card>            
-        
-              </ion-slide>
+      </ion-slide>      
 
       </ion-slides>
 
@@ -147,16 +109,17 @@
 </div>
 
   <!--Task List-->
-  <div id="taskList">
+  <!--Home-->
+  <div id="taskList" *ngIf="categoryIndex == '0' ">
     <ion-card>
-      <ion-card-header>Tasks</ion-card-header>
+      <ion-card-header>Home</ion-card-header>
 
       <ion-card-content>
         <ion-list>
           <ion-item-sliding>        
             <ion-item> <!-- loop here -->
               <ion-checkbox></ion-checkbox>
-              <ion-label></ion-label>
+              <ion-label>this is home</ion-label>
             </ion-item>
         
             <ion-item-options side="end">
@@ -168,5 +131,28 @@
       </ion-card-content>
     </ion-card>
   </div>
+
+  <!--School-->
+  <div  id="taskList" *ngIf="categoryIndex == '1' ">
+    <ion-card>
+      <ion-card-header>School</ion-card-header>
+      <ion-card-content>
+        <ion-list>
+          <ion-item-sliding *ngFor="let currentTask of currentTasks">         
+            <ion-item>
+              <ion-checkbox (change)="updateCheckbox()" [(ngModel)]="currentTask.complete"></ion-checkbox>
+              <ion-label>{{currentTask.name}}</ion-label>
+            </ion-item>
+        
+            <ion-item-options side="end">
+              <ion-item-option (click)="unread(item)">Delete</ion-item-option>
+            </ion-item-options>
+          </ion-item-sliding>
+        </ion-list>
+
+      </ion-card-content>
+    </ion-card>
+  </div>
+
 
 </ion-content>
