--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -82,7 +82,7 @@
             </ion-card>               
           </ion-slide>
 
-          <!--home-->
+          <!--categories-->
         <ion-slide *ngFor="let category of categories; let i = index">      
 
           <ion-segment [(ngModel)]="selectTabs">
@@ -109,39 +109,16 @@
 </div>
 
   <!--Task List-->
-  <!--Home-->
-  <div id="taskList" *ngIf="categoryIndex == '0' ">
-    <ion-card>
-      <ion-card-header>Home</ion-card-header>
-
-      <ion-card-content>
-        <ion-list>
-          <ion-item-sliding>        
-            <ion-item> <!-- loop here -->
-              <ion-checkbox></ion-checkbox>
-              <ion-label>this is home</ion-label>
-            </ion-item>
-        
-            <ion-item-options side="end">
-              <ion-item-option (click)="unread(item)">Delete</ion-item-option>
-            </ion-item-options>
-          </ion-item-sliding>
-        </ion-list>
-
-      </ion-card-content>
-    </ion-card>
-  </div>
-
   <!--School-->
-  <div  id="taskList" *ngIf="categoryIndex == '1' ">
+  <div  id="taskList">
     <ion-card>
-      <ion-card-header>School</ion-card-header>
       <ion-card-content>
         <ion-list>
           <ion-item-sliding *ngFor="let currentTask of currentTasks">         
             <ion-item>
-              <ion-checkbox (change)="updateCheckbox()" [(ngModel)]="currentTask.complete"></ion-checkbox>
+              <ion-checkbox [(ngModel)]="currentTask.complete" (ionChange)="updateCheckbox(currentTask)"></ion-checkbox>
               <ion-label>{{currentTask.name}}</ion-label>
+              <h4>{{currentTask.endDate | date:'dd MMM YYYY, HH:mm' }}</h4>
             </ion-item>
         
             <ion-item-options side="end">
