--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -11,15 +11,15 @@
   <!--segment-->
   <ion-segment [(ngModel)]="slideNumber" (ionChange)="changeSlide($event)">
     <ion-segment-button value="0">
-      <ion-label>List Details</ion-label>
+      <ion-label>Category</ion-label>
     </ion-segment-button>
 
     <ion-segment-button value="1">
-      <ion-label>List Details</ion-label>
+      <ion-label>Task</ion-label>
     </ion-segment-button>
     
     <ion-segment-button value="2">
-      <ion-label>List Details</ion-label>
+      <ion-label>Date & Time</ion-label>
     </ion-segment-button>
   </ion-segment>
 
@@ -32,6 +32,8 @@
     <!--Category-->
     <ion-slide>    
       <div class="inputArea">
+        <h2>Choose Category</h2>
+
         <ion-radio-group value="#">
           <ion-grid>
             <ion-row>
@@ -55,6 +57,8 @@
     <!--list details-->    
     <ion-slide>
       <div class="inputArea">
+        <h2>Enter Task Detials</h2>
+
         <ion-item id="listName">
           <ion-label position="floating">Enter Task Name</ion-label>
           <ion-input clearInput [(ngModel)]="item.name"></ion-input>
@@ -66,7 +70,7 @@
     <!--time & date-->
     <ion-slide>    
       <div class="inputArea">
-        <h2>Choose Date</h2>
+        <h2>Choose Date & Time</h2>
 
         <!--calendar-->
         <div></div>
@@ -75,8 +79,14 @@
         <div>
           <!--time-->
           <ion-item id="startTime">
-            <ion-label>Start Time</ion-label>
-            <ion-datetime display-format="h:mm A" picker-format="h:mm A" value="1990-02-19T07:43Z"></ion-datetime>
+            <ion-label>End Time</ion-label>
+            <ion-datetime [(ngModel)]="item.endTime" display-format="h:mm A" picker-format="h:mm A" value="1990-02-19T07:43Z"></ion-datetime>
+          </ion-item>
+
+          <!--end date-->
+          <ion-item>
+            <ion-label>End Date</ion-label>
+            <ion-datetime [(ngModel)]="item.endDate" value="1990-02-20" placeholder="Select Date"></ion-datetime>
           </ion-item>
 
           <!--reminder-->
@@ -88,7 +98,7 @@
               <ion-select-option value="2">2 Hours</ion-select-option>
               <ion-select-option value="5">5 Hours</ion-select-option>
             </ion-select>
-          </ion-item>
+          </ion-item>          
         </div>
       </div>
     </ion-slide>
