--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -116,6 +116,10 @@
               <h4>{{currentTask.endDate | date:'dd MMM YYYY, HH:mm' }}</h4>
             </ion-item>
         
+            <ion-item-options side="start">
+              <ion-item-option routerLink="/edit-task" (click)="getTask(currentIndex)">Edit</ion-item-option>
+            </ion-item-options>
+
             <ion-item-options side="end">
               <ion-item-option (click)="delete(currentIndex)">Delete</ion-item-option>
             </ion-item-options>
